# CV_sports_analysis

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONVENTIONS.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
benchmarks/: _aggregation.yaml
benchmarks/physical/: 45-second-agility-hurdle-jump.yaml  5x10m-sprint-cod.yaml  bangsbo-sprint.yaml  counter-movement-jump.yaml  drop-jump.yaml  foot-tapping.yaml  illinois-agility.yaml  landing-error-scoring-system.yaml  linear-sprint.yaml  medicine-ball-throw.yaml  multistage-fitness.yaml  repeated-sprint-ability.yaml  squat-jump.yaml  standing-long-jump.yaml  t-test.yaml  yo-yo-intermittent.yaml
benchmarks/technical/: figure-of-8-dribbling.yaml  juggling.yaml  wall-pass.yaml  (+2 more)
docs/: TEST_RULES.md
scripts/: _scaffold_specs.py  download_dataset.py  download_models.py  extract_frames.py  extract_roboflow_frames.py  filter_roboflow_frames.py  normalize_dataset.py  peek_dribble.py  peek_yt_frames.py  poc_yolo_world.py  run_test.py  smoke_5x10_cod.py  smoke_bangsbo_sprint.py  smoke_cmj.py  smoke_drop_jump.py  smoke_figure_of_8_dribbling.py  smoke_foot_tapping.py  smoke_illinois_agility.py  smoke_juggling.py  smoke_landing_error_scoring.py  smoke_linear_sprint.py  smoke_medicine_ball_throw.py  smoke_multistage_fitness.py  smoke_repeated_sprint_ability.py  smoke_squat_jump.py  smoke_standing_long_jump.py  smoke_straight_line_dribbling.py  smoke_t_test.py  smoke_test.py  smoke_wall_pass.py  smoke_yo_yo_intermittent.py  smoke_zig_zag_dribbling.py  train_all.sh  train_yolo.py
website_video_annotation/: reel.py  render.py
(+149 files in other folders)
