[project]
name = "sports-perf-analysis"
version = "0.1.0"
description = "Video-based sports performance analysis with benchmark scoring and AI summaries."
requires-python = ">=3.11"
dependencies = [
    "filterpy>=1.4.5",
    "lap>=0.5.12",
    "numpy>=2.4.4",
    "onnxruntime>=1.25.1",
    "openai>=2.33.0",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "ultralytics>=8.4.43",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
